--- a/frontend/src/app/workspace/component/agent-panel/action-plans-tab/action-plans-tab.component.html
+++ b/frontend/src/app/workspace/component/agent-panel/action-plans-tab/action-plans-tab.component.html
@@ -51,7 +51,9 @@
     class="action-plans-list">
     <div
       *ngFor="let plan of actionPlans"
-      class="action-plan-container">
+      class="action-plan-container"
+      (mouseenter)="onPlanHover(plan)"
+      (mouseleave)="onPlanUnhover()">
       <div class="plan-header-bar">
         <button
           nz-button
