unify the agent panel style

--- a/frontend/src/app/workspace/component/agent-panel/agent-panel.component.html
+++ b/frontend/src/app/workspace/component/agent-panel/agent-panel.component.html
@@ -17,99 +17,124 @@
  under the License.
 -->
 
+<!-- Docked Button -->
+<button
+  id="agent-docked-button"
+  nz-button
+  nzType="primary"
+  nzShape="circle"
+  nzSize="large"
+  (click)="openPanel()"
+  *ngIf="!width"
+  nz-tooltip
+  nzTooltipPlacement="left"
+  nzTooltipTitle="AI Agents">
+  <span
+    nz-icon
+    nzType="robot"></span>
+</button>
+
 <div
   cdkDrag
   cdkDragBoundary="texera-workspace"
   id="agent-container"
-  class="agent-panel-box"
+  class="box"
   nz-resizable
   [nzMinWidth]="400"
   [nzMinHeight]="450"
   [nzMaxWidth]="window.innerWidth * 0.9"
-  [nzMaxHeight]="window.innerHeight * 0.9"
+  [nzMaxHeight]="window.innerHeight * 0.85"
   [style.width.px]="width"
   [style.height.px]="height"
   (nzResize)="onResize($event)"
   (cdkDragStarted)="handleDragStart()"
   [cdkDragFreeDragPosition]="dragPosition">
-  <!-- Panel Header -->
-  <div
-    class="panel-header"
-    cdkDragHandle>
-    <div class="header-title">
-      <i
+  <!-- Return and Minimize Buttons -->
+  <ul
+    id="return-button"
+    nz-menu
+    [ngClass]="{'shadow': !width}"
+    *ngIf="width">
+    <button
+      nz-button
+      nzType="text"
+      (click)="resetPanelPosition()"
+      *ngIf="!isDocked">
+      <span
         nz-icon
-        nzType="robot"
-        nzTheme="outline"></i>
-      <span>AI Agents</span>
-    </div>
-    <div class="header-actions">
-      <button
-        nz-button
-        nzType="text"
-        nzSize="small"
-        (click)="resetPanelPosition()"
-        nz-tooltip
-        nzTooltipTitle="Reset position">
-        <i
-          nz-icon
-          nzType="enter"></i>
-      </button>
-    </div>
+        nzType="enter"></span>
+    </button>
+    <li
+      nz-menu-item
+      (click)="openPanel()">
+      <span
+        nz-icon
+        nzType="minus"></span>
+    </li>
+  </ul>
+
+  <div
+    #content
+    id="content"
+    [hidden]="!width">
+    <h4
+      id="title"
+      cdkDragHandle>
+      AI Agents
+    </h4>
+
+    <!-- Tabs -->
+    <nz-tabset
+      [(nzSelectedIndex)]="selectedTabIndex"
+      class="agent-tabs"
+      nzType="card"
+      [nzTabBarExtraContent]="tabBarExtra">
+      <!-- Registration Tab -->
+      <nz-tab nzTitle="New Agent">
+        <ng-template nz-tab>
+          <texera-agent-registration (agentCreated)="onAgentCreated($event)"></texera-agent-registration>
+        </ng-template>
+      </nz-tab>
+
+      <!-- Action Plans Tab -->
+      <nz-tab nzTitle="Action Plans">
+        <ng-template nz-tab>
+          <texera-action-plans-tab></texera-action-plans-tab>
+        </ng-template>
+      </nz-tab>
+
+      <!-- Agent Tabs -->
+      <nz-tab
+        *ngFor="let agent of agents"
+        [nzTitle]="agentTabTitle">
+        <ng-template
+          #agentTabTitle
+          let-active="active">
+          <div class="agent-tab-title">
+            <span class="agent-tab-name">{{ agent.name }}</span>
+            <button
+              nz-button
+              nzType="text"
+              nzSize="small"
+              class="agent-tab-close"
+              (click)="deleteAgent(agent.id, $event)"
+              nz-tooltip
+              nzTooltipTitle="Close agent">
+              <i
+                nz-icon
+                nzType="close"
+                nzTheme="outline"></i>
+            </button>
+          </div>
+        </ng-template>
+        <ng-template nz-tab>
+          <texera-agent-chat [agentInfo]="agent"></texera-agent-chat>
+        </ng-template>
+      </nz-tab>
+    </nz-tabset>
+
+    <nz-resize-handles [nzDirections]="['left', 'bottom', 'bottomLeft']"></nz-resize-handles>
   </div>
-
-  <!-- Tabs -->
-  <nz-tabset
-    [(nzSelectedIndex)]="selectedTabIndex"
-    class="agent-tabs"
-    nzType="card"
-    [nzTabBarExtraContent]="tabBarExtra">
-    <!-- Registration Tab -->
-    <nz-tab nzTitle="New Agent">
-      <ng-template nz-tab>
-        <texera-agent-registration (agentCreated)="onAgentCreated($event)"></texera-agent-registration>
-      </ng-template>
-    </nz-tab>
-
-    <!-- Action Plans Tab -->
-    <nz-tab nzTitle="Action Plans">
-      <ng-template nz-tab>
-        <texera-action-plans-tab></texera-action-plans-tab>
-      </ng-template>
-    </nz-tab>
-
-    <!-- Agent Tabs -->
-    <nz-tab
-      *ngFor="let agent of agents"
-      [nzTitle]="agentTabTitle">
-      <ng-template
-        #agentTabTitle
-        let-active="active">
-        <div class="agent-tab-title">
-          <span class="agent-tab-name">{{ agent.name }}</span>
-          <button
-            nz-button
-            nzType="text"
-            nzSize="small"
-            class="agent-tab-close"
-            (click)="deleteAgent(agent.id, $event)"
-            nz-tooltip
-            nzTooltipTitle="Close agent">
-            <i
-              nz-icon
-              nzType="close"
-              nzTheme="outline"></i>
-          </button>
-        </div>
-      </ng-template>
-      <ng-template nz-tab>
-        <texera-agent-chat [agentInfo]="agent"></texera-agent-chat>
-      </ng-template>
-    </nz-tab>
-  </nz-tabset>
-
-  <!-- Resize handles -->
-  <nz-resize-handles [nzDirections]="['right', 'bottom', 'bottomRight']"></nz-resize-handles>
 </div>
 
 <!-- Tab Bar Extra Content Template -->
